fixed rje cloud 3 from going behind section background image on desktop

--- a/themes/Moov2/Styles/trumps/_background.scss
+++ b/themes/Moov2/Styles/trumps/_background.scss
@@ -190,6 +190,7 @@
 
     @include bp-min-width($bp-medium) {
         top: 450px;
+        z-index: 1;
     }
 }
 
